--- a/index.html
+++ b/index.html
@@ -21,70 +21,75 @@
 
     </head>
     <body>
-        <div class="pageone" id="pageone">
-            <div class="navigationbar">
-                <button onClick="window.location.href='index.html'" class="selectedbutton">Home</button>
-                <button onClick="window.location.href='pages/projects.html'">Projects</button>
-                <button onClick="window.location.href='index.html'"><img src="/images/b.svg" class="logo logomargin" alt="logo"/></button>
-                <button onClick="window.location.href='pages/blog.html'">Blog</button>
-                <button onClick="window.location.href='pages/contact.html'">Contact</button>
+        <div>
+            <div class="pageone" id="pageone">
+                <div class="navigationbar">
+                    <button onClick="window.location.href='index.html'" class="selectedbutton">Home</button>
+                    <button onClick="window.location.href='pages/projects.html'">Projects</button>
+                    <button onClick="window.location.href='index.html'"><img src="/images/b.svg" class="logo logomargin" alt="logo"/></button>
+                    <button onClick="window.location.href='pages/blog.html'">Blog</button>
+                    <button onClick="window.location.href='pages/contact.html'">Contact</button>
+                </div>
+
+                <div class="profilephotoandbio">
+                    <img src="images/dogRidingTurtle.gif" alt="Cute Dog" class="circleImage">
+                    <h1>
+                        Braeden Cullen
+                    </h1>
+                    <p class="paragraph center">
+                        I am a student developer from the Illinois mathematics and science academy interested in Machine Learning, IoT, and Robotics.
+                    </p>
+                    <br>
+                    <div class="socials">
+                        <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/circuitchicken"></a>
+                        <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
+                        <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
+                    </div>               
+                </div>
+                <div class="chevron">
+                    <img src="/images/chevron.svg" class="chevronpageone" alt="chevron"/>
+                </div>
             </div>
 
-            <div class="profilephotoandbio">
-                <img src="images/dogRidingTurtle.gif" alt="Cute Dog" class="circleImage">
-                <h1>
-                    Braeden Cullen
+            <script src="js/scroll.js"></script>
+
+            <div class="pagetwo" id="pagetwo">
+                <h1 class="center header">
+                    Featured projects
                 </h1>
-                <p class="paragraph center">
-                    I am a student developer from the Illinois mathematics and science academy interested in Machine Learning, IoT, and Robotics.
-                </p>
-                <br>
-                <div class="socials">
-                    <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/circuitchicken"></a>
-                    <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
-                    <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
-                </div>               
-            </div>
-            <div class="chevron">
-                <img src="/images/chevron.svg" class="chevron" alt="chevron"/>
-            </div>
-        </div>
+                <div class="vps">
+                    <div class="vp">
+                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <h1>
+                            <strong>Dog Prediction With AI</strong>
+                        </h1>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
+                        </p>
+                    </div>
+                    
+                    <div class="vp">
+                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <h1>
+                            <strong>Dog Prediction With AI</strong>
+                        </h1>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
+                        </p>
+                    </div>
 
-        <script src="js/scroll.js"></script>
-
-        <div class="pagetwo" id="pagetwo">
-            <h1 class="center header">
-                Featured projects
-            </h1>
-            <div class="vps">
-                <div class="vp">
-                    <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
-                    <h1>
-                        <strong>Dog Prediction With AI</strong>
-                    </h1>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
-                    </p>
+                    <div class="vp" onClick="window.location.href='../index.html'">
+                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <h1>
+                            <strong>Dog Prediction With AI</strong>
+                        </h1>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
+                        </p>
+                    </div>
                 </div>
-                
-                <div class="vp">
-                    <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
-                    <h1>
-                        <strong>Dog Prediction With AI</strong>
-                    </h1>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
-                    </p>
-                </div>
-
-                <div class="vp" onClick="window.location.href='../index.html'">
-                    <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
-                    <h1>
-                        <strong>Dog Prediction With AI</strong>
-                    </h1>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer too
-                    </p>
+                <div class="chevron">
+                    <img src="/images/chevron.svg" class="chevronpagetwo" alt="chevron"/>
                 </div>
             </div>
         </div>
