form outline working properly

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <div class="projectspage">
+        <div class="projectspage" id="projectspage">
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
