--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,7 +16,8 @@
         <!--Add fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-
+        <!--Add favicon-->
+        <link rel="icon" href="../images/favicon.ico" type="very cute dog">
     </head>
 
     <body>
