--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,8 @@
         <!--Add fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-
+        <!--Add favicon-->
+        <link rel="icon" href="../images/favicon.ico" type="very cute dog">
     </head>
 
     <body>
@@ -50,9 +51,9 @@
                   <input type="text" id="lname" name="lname">
                 </div>
                 <div>
-                  <label for="name">Full name:</label><br>
+                  <label for="message">Phone number:</label><br>
                   <input type="text" class="formsections" style="size: 50;"><br>
-                  <label for="email">Email address:</label><br>
+                  <label for="email">Message:</label><br>
                   <input type="text" id="lname" name="lname">
                 </div>
               </div>
