still working on form

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@ the others belong to external styling libraries I used for this project.-->
     </head>
     <body>
         <div>
-            <!--script src="js/scroll.js"></script-->
             <script src="js/fakescroll.js"></script>
 
             <div class="pageone" id="pageone">
@@ -68,7 +67,7 @@ the others belong to external styling libraries I used for this project.-->
                         <img src="/images/chevron.svg" class="chevronpageone" onclick="smoothScroll('.pagetwo')" alt="chevron"/>
                     </button>
                 </div>
-                <p class="center">
+                <p class="disclaimer">
                     Disclaimer: this website is not advertising real services and all information found on this site should be taken with caution.
                 </p>
             </div>
