--- a/pages/blog.html
+++ b/pages/blog.html
@@ -25,7 +25,7 @@
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
-                <button onClick="window.location.href='../index.html'"><img src="/images/b.svg" class="logo" alt="logo"/></button>
+                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="/images/b.svg" class="logo" alt="logo"/></button>
                 <button onClick="window.location.href='blog.html'" class="selectedbutton">Blog</button>
                 <button onClick="window.location.href='contact.html'">Contact</button>
             </div>
@@ -33,7 +33,7 @@
                 Blog
             </h1>
             <div class="socials">
-                <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/circuitchicken"></a>
+                <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
             </div>
