--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ the others belong to external styling libraries I used for this project.-->
                 <div class="navigationbar">
                     <button onClick="window.location.href='index.html'" class="selectedbutton">Home</button>
                     <button onClick="window.location.href='pages/projects.html'">Projects</button>
-                    <button onClick="window.location.href='index.html'"><img src="/images/b.svg" class="logo logomargin" alt="logo"/></button>
+                    <button onClick="window.location.href='index.html'" class="logobutton"><img src="/images/b.svg" class="logo logomargin" alt="logo"/></button>
                     <button onClick="window.location.href='pages/blog.html'">Blog</button>
                     <button onClick="window.location.href='pages/contact.html'">Contact</button>
                 </div>
@@ -57,7 +57,7 @@ the others belong to external styling libraries I used for this project.-->
                     </p>
                     <br>
                     <div class="socials">
-                        <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/circuitchicken"></a>
+                        <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                         <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                         <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
                     </div>               
