--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
-                <button onClick="window.location.href='../index.html'"><img src="/images/b.svg" class="logo" alt="logo"/></button>
+                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="/images/b.svg" class="logo" alt="logo"/></button>
                 <button onClick="window.location.href='blog.html'">Blog</button>
                 <button onClick="window.location.href='contact.html'" class="selectedbutton">Contact</button>
             </div>
@@ -36,12 +36,12 @@
             </h1>
 
             <div class="socials">
-                <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/circuitchicken"></a>
+                <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
             </div>
             <p class="paragraph center" style="margin-top: 2%;">
-              Feel free to contact me by filling out this form
+              Feel free to contact me with research opportunities by filling out this form:
             </p>
             <form>
               <div class="formgrid">
