--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ the others belong to external styling libraries I used for this project.-->
                 <div class="navigationbar">
                     <button onClick="window.location.href='index.html'" class="selectedbutton">Home</button>
                     <button onClick="window.location.href='pages/projects.html'">Projects</button>
-                    <button onClick="window.location.href='index.html'" class="logobutton"><img src="/images/b.svg" class="logo logomargin" alt="logo"/></button>
+                    <button onClick="window.location.href='index.html'" class="logobutton"><img src="images/b.svg" class="logo logomargin" alt="logo"/></button>
                     <button onClick="window.location.href='pages/blog.html'">Blog</button>
                     <button onClick="window.location.href='pages/contact.html'">Contact</button>
                 </div>
@@ -64,7 +64,7 @@ the others belong to external styling libraries I used for this project.-->
                 </div>
                 <div class="chevron">
                     <button class="chevron chevronpageone">
-                        <img src="/images/chevron.svg" class="chevronpageone" onclick="smoothScroll('.pagetwo')" alt="chevron"/>
+                        <img src="images/chevron.svg" class="chevronpageone" onclick="smoothScroll('.pagetwo')" alt="chevron"/>
                     </button>
                 </div>
                 <p class="disclaimer">
@@ -75,7 +75,7 @@ the others belong to external styling libraries I used for this project.-->
             <div class="pagetwo" id="pagetwo">
                 <div class="chevron">
                     <button class="chevron">
-                        <img src="/images/chevron.svg" class="chevronupsidedown" onclick="smoothScroll('.pageone')" alt="chevron"/>
+                        <img src="images/chevron.svg" class="chevronupsidedown" onclick="smoothScroll('.pageone')" alt="chevron"/>
                     </button>
                 </div>
 
@@ -84,7 +84,7 @@ the others belong to external styling libraries I used for this project.-->
                 </h1>
                 <div class="vps">
                     <div class="vp">
-                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         <h1>
                             <strong>Dog Prediction With AI</strong>
                         </h1>
@@ -94,7 +94,7 @@ the others belong to external styling libraries I used for this project.-->
                     </div>
                     
                     <div class="vp">
-                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         <h1>
                             <strong>Dog Prediction With AI</strong>
                         </h1>
@@ -104,7 +104,7 @@ the others belong to external styling libraries I used for this project.-->
                     </div>
 
                     <div class="vp" onClick="window.location.href='../index.html'">
-                        <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                        <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         <h1>
                             <strong>Dog Prediction With AI</strong>
                         </h1>
@@ -115,7 +115,7 @@ the others belong to external styling libraries I used for this project.-->
                 </div>
                 <div class="chevron">
                     <button class="chevron">
-                        <img src="/images/chevron.svg" class="chevronpagetwo" onclick="smoothScroll('.pagethree')" alt="chevron"/>
+                        <img src="images/chevron.svg" class="chevronpagetwo" onclick="smoothScroll('.pagethree')" alt="chevron"/>
                     </button>
                 </div>
             </div>
@@ -123,7 +123,7 @@ the others belong to external styling libraries I used for this project.-->
             <div class="pagethree" id="pagethree">
                 <div class="chevron">
                     <button class="chevron">
-                        <img src="/images/chevron.svg" class="chevronupsidedown" onclick="smoothScroll('.pagetwo')" alt="chevron"/>
+                        <img src="images/chevron.svg" class="chevronupsidedown" onclick="smoothScroll('.pagetwo')" alt="chevron"/>
                     </button>
                 </div>
 
@@ -134,7 +134,7 @@ the others belong to external styling libraries I used for this project.-->
                 <div class="hps">
                     <div class="hp">
                         <div class="imagesectionofpost">
-                            <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                            <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         </div>
                         <div class="textsectionofpost">
                             <h1>
@@ -150,7 +150,7 @@ the others belong to external styling libraries I used for this project.-->
                 <div class="hps">
                     <div class="hp">
                         <div class="imagesectionofpost">
-                            <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                            <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         </div>
                         <div class="textsectionofpost">
                             <h1>
@@ -166,7 +166,7 @@ the others belong to external styling libraries I used for this project.-->
                 <div class="hps">
                     <div class="hp">
                         <div class="imagesectionofpost">
-                            <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
+                            <img src="images/dogRidingTurtle.gif" alt="Cute Dog">
                         </div>
                         <div class="textsectionofpost">
                             <h1>
@@ -182,7 +182,7 @@ the others belong to external styling libraries I used for this project.-->
                 
                 <div class="chevron">
                     <button class="chevron">
-                        <img src="/images/chevron.svg" class="chevronpagetwo" onclick="smoothScroll('.pageone')" alt="chevron"/>
+                        <img src="images/chevron.svg" class="chevronpagetwo" onclick="smoothScroll('.pageone')" alt="chevron"/>
                     </button>
                 </div>
             </div>
