added some form stuff

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
-                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="/images/b.svg" class="logo" alt="logo"/></button>
+                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="../images/b.svg" class="logo" alt="logo"/></button>
                 <button onClick="window.location.href='blog.html'">Blog</button>
                 <button onClick="window.location.href='contact.html'" class="selectedbutton">Contact</button>
             </div>
@@ -50,12 +50,16 @@
                   <input type="text" id="name"><br>
                   <label for="email">Email address:</label><br>
                   <input type="text" id="email">
+                  <label for="position">Name of position:</label><br>
+                  <input type="text" id="position">
                 </div>
                 <div>
                   <label for="numer">Phone number:</label><br>
                   <input type="text" id="phonenumber"><br>
                   <label for="message">Message:</label><br>
                   <input type="text" id="message">
+                  <label for="company">Affiliated Organization:</label><br>
+                  <input type="text" id="organization">
                 </div>
               </div>
               
