--- a/pages/blog.html
+++ b/pages/blog.html
@@ -25,7 +25,7 @@
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
-                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="/images/b.svg" class="logo" alt="logo"/></button>
+                <button onClick="window.location.href='../index.html'" class="logobutton"><img src="../images/b.svg" class="logo" alt="logo"/></button>
                 <button onClick="window.location.href='blog.html'" class="selectedbutton">Blog</button>
                 <button onClick="window.location.href='contact.html'">Contact</button>
             </div>
