fixed chevron error

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,7 +21,9 @@
     </head>
 
     <body>
+        <!--Projects page-->
         <div class="projectspage" id="projectspage">
+            <!--Navigation bar-->
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
@@ -32,11 +34,13 @@
             <h1 class="center header">
                 Blog
             </h1>
+            <!--Socials-->
             <div class="socials">
                 <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
             </div>
+            <!--Horizontal posts-->
             <div class="hps">
                 <div class="hp">
                     <div class="imagesectionofpost">
@@ -53,6 +57,7 @@
                     </div>
                 </div>
             </div>
+            <!--Horizontal post-->
             <div class="hps">
                 <div class="hp">
                     <div class="imagesectionofpost">
@@ -69,6 +74,7 @@
                     </div>
                 </div>
             </div>
+            <!--Horizontal post-->
             <div class="hps">
                 <div class="hp">
                     <div class="imagesectionofpost">
