--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,7 +40,7 @@
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
             </div>
-            <!--Horizontal posts-->
+            <!--Horizontal posts, they each contain a sample image and random text as a proof of concept.-->
             <div class="hps">
                 <div class="hp">
                     <div class="imagesectionofpost">
