--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,9 +20,10 @@
         <link rel="icon" href="../images/favicon.ico" type="very cute dog">
     </head>
 
+    <!--Contact form-->
     <body id="contact">
-
         <div class="projectspage" id="contactspage">
+            <!--navigation bar-->
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'">Projects</button>
@@ -34,7 +35,7 @@
             <h1 class="center header">
                 Contact Me
             </h1>
-
+            <!--socials-->
             <div class="socials">
                 <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
@@ -43,6 +44,7 @@
             <p class="paragraph center" style="margin-top: 2%;">
               Feel free to contact me with research opportunities by filling out this form:
             </p>
+            <!--form, it is styled in a grid fashion so the text inputs in the first div are part of the first grid and so on-->
             <form>
               <div class="formgrid">
                 <div>
@@ -66,7 +68,7 @@
               <input onClick="" type="submit" id="submitbutton" value="Submit Form" class="submitbutton">
             </form>
         </div>
-        
+        <!--Run the form.js file for form processing and user alerting-->
         <script src="../js/form.js"></script>
     </body>
 
