--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,7 +21,9 @@
     </head>
 
     <body>
+        <!--Projects page-->
         <div class="projectspage">
+            <!--navigation bar-->
             <div class="navigationbar">
                 <button onClick="window.location.href='../index.html'">Home</button>
                 <button onClick="window.location.href='projects.html'" class="selectedbutton">Projects</button>
@@ -32,11 +34,13 @@
             <h1 class="center header">
                 Projects
             </h1>
+            <!--Psocials-->
             <div class="socials">
                 <a class="btn-floating btn-small waves-light center social fa fa-twitter socials" href="https://twitter.com/elonmusk"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-linkedin socials" href="https://www.linkedin.com/in/braeden-cullen-4835371a1/"></a>
                 <a class="btn-floating btn-small waves-light center social fa fa-github socials" href="https://github.com/BraedenCu/"></a>
             </div>
+            <!--Vertical posts system, for displaying projects. For each of the posts I just put a sample image and a sample discription as a proof of concept-->
             <div class="vps">
                 <div class="vp">
                     <img src="../images/dogRidingTurtle.gif" alt="Cute Dog">
