--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@ links to my social media and a mission statement.
 Th three other pages are under the pages directory, and there content is relatively self explanatory.
 This project also makes some use of javascript to create the scrolling effect
 found on the first page once the chevron is clicked. 
-The javascript I created for this project is the fakescroll.js file in the js directory,
-the others belong to external styling libraries I used for this project.-->
+The javascript I created for this project is the js directory (although some of those files 
+belong to the materialize css library I used for this probject).
+
+
+Links to sites that I made use of during the creaiton of this project:
+https://stackoverflow.com/questions/22288494/margin-top-in-percentage-not-working-as-expected
+https://materializecss.com/
+https://www.w3schools.com/html/default.asp
+https://www.w3schools.com/css/default.asp
+https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model
+https://colorhunt.co/palette/179373
+https://developers.google.com/fonts/docs/getting_started
+https://getbootstrap.com/docs/5.0/getting-started/introduction/
+https://terrymooreii.github.io/materialize-social/
+https://nodemon.io/
+https://scotch.io/tutorials/implementing-a-scroll-based-animation-with-javascript
+https://stackoverflow.com/
+-->
 
 
 <!DOCTYPE html>
-<html style="scroll-behavior: smooth;">
+<html>
     <head>
         <title>Breaden Cullen Portfolio</title>
         <!--Add fonts-->
