--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!--The purpose of this project is to present blog posts and my personal projects in 
+<!--
+url for my site: students.imsa.edu/~bcullen    
+    
+The purpose of this project is to present blog posts and my personal projects in 
 the field of softwarer development in order to attract potential employers to fill 
 out my contact form with a job offer.
 The index.html file is the homepage that includes featured projects and blog posts while also including
