--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!--
+Braeden Cullen, 3/6/21, portfolio website aimed to attract potential employers
 url for my site: students.imsa.edu/~bcullen    
     
 The purpose of this project is to present blog posts and my personal projects in 
 the field of softwarer development in order to attract potential employers to fill 
 out my contact form with a job offer.
 The index.html file is the homepage that includes featured projects and blog posts while also including
-links to my social media and a mission statement.
-Th three other pages are under the pages directory, and there content is relatively self explanatory.
+links to my social media and a mission statement. The chevron at the bottom of this page will lead to a view of my featured projects. Pressing the chevron again will lead to 
+a view of my featured blog posts, and pushing it again will bring you back to the top of the page.
+Th three other pages are under the pages directory, and there content is relatively self explanatory. The blog.html file contains horizontal posts (blog posts), the projects.html file contains
+vertical posts (projects), and the contact.html file contains a form for prospective employers.
 This project also makes some use of javascript to create the scrolling effect
-found on the first page once the chevron is clicked. 
+found on the first page once the chevron is clicked and also to gather form data on the contact page. 
 The javascript I created for this project is the js directory (although some of those files 
 belong to the materialize css library I used for this probject).
 
